# wvncc

./: .gitignore  BUILD.md  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  setup.md  wvncc.rc
.github/: copilot-instructions.md
